# BlueprintAutoLayout

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
Data/: Basic.yaml  layout.yaml
src/: BlueprintGUI.cpp  BlueprintGUI.h  BlueprintLayout.cpp  BlueprintLayout.h  main.cpp
